--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="title" content="Título de la WEB">
     <meta name="description" content="Descripción de la WEB">    
-    <link href="estilos.css" rel="stylesheet">    
+    <link href="estilos.css" rel="stylesheet"> 
+    <script src="js/index.js"></script>
 </head>  
 <body>    
     <header>
