Mi aportación a la feature-v1

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <article>
             <h2>CONTENIDO PRINCIPAL</h2>
             <p>Este es el contenido principal de mi web.</p>      
+            <p>Añadiendo párrafo de feature-v1.</p>
         </article>      
     </section>
     <aside>
