--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <footer>
         <h4>Redes sociales</h4>
         <a href="#">Facebook</a>
-        <a href="#">Tiwtter</a>
+        <a href="https://twitter.com/">Tiwtter</a>
     </footer>
 </body>  
 </html>
