--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <p>Añadiendo párrafo de feature-v1.</p>
         </article>      
     </section>
+	<p> Prueba Hotfix </p>
     <aside>
         <h3>Testimonios</h3>
         <p>Me gusta mucho esta página.</p>
