--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         </article>      
     </section>
 	<p> Prueba Hotfix </p>
+	<p> Prueba release </p>
     <aside>
         <h3>Testimonios</h3>
         <p>Me gusta mucho esta página.</p>
